--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "mysql2": "^3.3.1",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
